Fix event horizon alignment again

--- a/src/app/dialing-computer/pages/gate-screen/gate-screen.page.scss
+++ b/src/app/dialing-computer/pages/gate-screen/gate-screen.page.scss
@@ -127,7 +127,7 @@ sg-dialing-status {
 }
 
 sg-gate {
-	height: 64vh;
+	height: 62vh;
 	top: 4vh;
 	width: 60vh;
 }
